# blockchain-voting

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_ARCHITECTURE.md  README.md
.github/workflows/: ci.yml
client/: Dockerfile  bun.lockb  docker-compose.yml  index.html  nginx.conf  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/algorand/: GovernanceContract.arc56.json  config.ts  governance-client.ts  types.ts
client/src/i18n/: index.ts
contracts/: pyproject.toml
contracts/scripts/: deploy.py  populate_census.py
contracts/smart_contracts/voting/: SistemaVotacion.approval.puya.map  SistemaVotacion.approval.teal  SistemaVotacion.arc56.json  constants.py  contract.py  deploy_config.py  generador_eleccions.py  logica_propostes.py  logica_votacio.py  verificador.py
contracts/tests/: conftest.py  test_doble_vot.py  test_generador.py  test_propostes.py  test_votacio.py
docs/: index.html
infra/: README.md
infra/algorand/: docker-compose.yml
network/: .env.example  README.md  docker-compose.yml  test_integration.py
network/anchoring/: Dockerfile  __init__.py  algorand_reader.py  anchoring_service.py  consensus.py  ethereum_submitter.py  hasher.py  models.py  requirements.txt  service.py
network/config/: __init__.py  network_config.py  universities.json
network/ethereum/: Dockerfile  hardhat.config.js  package-lock.json  package.json
network/scripts/: add_university.py  run_e2e_simulation.py  setup_universities.py  simulate_election.py  verify_anchoring.py
(+50 files in other folders)
