[tool.poetry]
name = "blockchain-voting-contracts"
version = "0.1.0"
description = "Smart Contracts per al sistema de votacio electronica"
authors = [
    "Dylan Luigi C. <dylanluigi@users.noreply.github.com>",
    "Toni Contesti <tcontesti@users.noreply.github.com>",
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
algokit-utils = "^4.0.0"
python-dotenv = "^1.0.0"
algorand-python = "^3"
algorand-python-testing = "^1"

[tool.poetry.group.dev.dependencies]
algokit-client-generator = "^2.1.0"
puyapy = "*"
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
